force-app/main/default/objects/Vehicle__c/fields/Engine_Status__c.field-meta.xml
<CustomField>
    <fullName>Engine_Status__c</fullName>
    <label>Engine Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Change Oil</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>