force-app/main/default/objects/Vehicle__c/fields/Fuel_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Remaining__c</fullName>
    <label>Fuel Remaining</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>