force-app/main/default/objects/Vehicle__c/fields/Fuel_Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank_Capacity__c</fullName>
    <label>Fuel Tank Capacity (in ltrs)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>