force-app/main/default/objects/Vehicle__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mileage</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>