force-app/main/default/objects/Vehicle__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <label>Odometer Reading</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>