force-app/main/default/objects/Vehicle__c/fields/Odometer_Reading_After_Last_Trip__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading_After_Last_Trip__c</fullName>
    <label>Odometer Reading After Last Trip</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>