force-app/main/default/objects/Vehicle__c/fields/Route_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Route_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Assigned</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Fleet</relationshipLabel>
    <relationshipName>Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>