force-app/main/default/objects/Vehicle__c/fields/Tyre_Condition__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Condition__c</fullName>
    <label>Tyre Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand New</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Half Worn</fullName>
            </value>
            <value>
                <fullName>Retreaded</fullName>
            </value>
            <value>
                <fullName>Full Worn</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>