force-app/main/default/objects/Vehicle__c/fields/Tyre_Pressure_Psi__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Pressure_Psi__c</fullName>
    <label>Tyre Pressure (Psi)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>