force-app/main/default/objects/Vehicle__c/fields/Vehicle_Keys_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Keys_Status__c</fullName>
    <label>Vehicle Keys Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>with Driver</fullName>
            </value>
            <value>
                <fullName>with Watchman</fullName>
            </value>
            <value>
                <fullName>with Supervisor</fullName>
            </value>
            <value>
                <fullName>with Mechanic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>