force-app/main/default/objects/Vehicle__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>