force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner__c</fullName>
    <label>Vehicle Owner</label>
    <referenceTo>CEO__c</referenceTo>
    <relationshipLabel>Fleet</relationshipLabel>
    <relationshipName>Fleet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>