force-app/main/default/objects/Vehicle__c/fields/Year_of_Make__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Make__c</fullName>
    <label>Year of Make</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>