force-app/main/default/objects/Vehicle__c/validationRules/Vehicle_name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name )  &lt;&gt; 10
 || 
REGEX( Name , &quot;[A-Z]{2}-[0-9]{2}-[A-Z]{2}-[0-9]{4}&quot;)</errorConditionFormula>
    <errorMessage>Give a proper vehicle number</errorMessage>
</ValidationRule>